# ib-practica12-oop-gtests-exercism-Beikonss

Complejo/: CMakeLists.txt
Complejo/complejo/src/: complejos.cc
Complejo_modificacion/: CMakeLists.txt
Complejo_modificacion/complejo_mod/src/: Complejo.cc  Complejo.h  complejo_modificacion.cc
Fecha/: CMakeLists.txt
Fecha/fecha/src/: fecha.cc  fechas.cc  fechas.txt
complejo/: CMakeLists.txt
complejo/src/: complejo.cc  complejo.h
fecha/src/: fecha.h
